2010-02-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c(assemble): don't destroy asmName twice

2010-02-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/ralloc.c (packRegsDPTRuse): fixed bug 2938110
	* support/regression/tests/bug2938110.c: new, added

2010-02-01 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/lkar.c, sdas/linksrc/lksdcclib.c:
	  detection of asxxxx v3.0 and higher rel files

2010-01-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole.

2010-01-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure,
	* configure.in: added device/lib/huge/Makefile

2010-01-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/asm/mcs51/features.h: added _RETURN
	* device/include/setjmp.h: adapted for model-huge
	* device/lib/_setjmp.c: adapted for xstack and model-huge
	* device/lib/_decdptr.c(_decdptr): __naked
	* device/lib/_logexpf.c (_fs_cordic_rshift_r765_unsigned): __naked
	* device/lib/_mullong.c: use _AUTOMEM from sdcc-lib.h
	* device/lib/_startup.c (_sdcc_external_startup): __nonbanked
	* device/lib/_strlen.c,
	* device/lib/abs.c,
	* device/lib/labs.c: use _RETURN
	* device/lib/cotf.c,
	* device/lib/tanf.c,
	* device/lib/tancotf.c (tancotf): changed iscotan to BOOL
	* device/lib/expf.c,
	* device/lib/logf.c: adapted for model-huge
	* device/lib/printf_large.c: set USE_FLOATS for ds390, xstack, model-huge
	* device/lib/huge: added directory
	* device/lib/huge/Makefile.in: new, added
	* src/mcs51/gen.c (aopPut, Push): factored out Push,
	  (getFreePtr): save R0 in B for PCALL,
	  (opIsGptr): also true for banked function pointers,
	  (saveRegisters, unsaveRegisters): always save for banked functions,
	    don't kill R0,
	  (genCall, genPcall, genEndFunction): even static functions are banked in
	    model-huge, address could be taken,
	  (genPcall): don't kill R0-R2 before genSend
	* src/mcs51/main.c (_mcs51_keywords): added nonbanked,